Update html files

--- a/startup-html/garden.html
+++ b/startup-html/garden.html
@@ -22,12 +22,12 @@
     </header>
 
     <main>
-      <div id="picture" class="picture-box"><img width="400px" src="garden-screen.png" alt="garden" /></div>
+      <div id="picture" class="picture-box"><img width="400px" src="garden-screen.png" alt="garden placeholder" /></div>
     </main>
 
     <footer>
       <hr />
-      <span class="text-reset">Author Name(s)</span>
+      <span class="text-reset">Dylan Harps</span>
       <br />
       <a href="https://github.com/Dylan-Harps/startup">GitHub</a>
     </footer>
