--- a/startup-html/index.html
+++ b/startup-html/index.html
@@ -37,11 +37,13 @@
         <button type="submit">Login</button>
         <button type="submit">Create</button>
       </form>
+
+      <div id="picture" class="picture-box"><img width="400px" src="login-screen.png" alt="login placeholder" /></div>
     </main>
 
     <footer>
       <hr />
-      <span class="text-reset">Author Name(s)</span>
+      <span class="text-reset">Dylan Harps</span>
       <br />
       <a href="https://github.com/Dylan-Harps/startup">GitHub</a>
     </footer>
