--- a/startup-html/quiz.html
+++ b/startup-html/quiz.html
@@ -23,7 +23,7 @@
     </header>
 
     <main>
-      <div id="picture" class="picture-box"><img width="400px" src="placeholder.jpg" alt="random" /></div>
+      <div id="picture" class="picture-box"><img width="400px" src="lesson-screen.png" alt="quiz placeholder" /></div>
 
       <p>
         Quizzical
@@ -32,7 +32,7 @@
 
     <footer>
       <hr />
-      <span class="text-reset">Author Name(s)</span>
+      <span class="text-reset">Dylan Harps</span>
       <br />
       <a href="https://github.com/Dylan-Harps/startup">GitHub</a>
     </footer>
