--- a/startup-html/about.html
+++ b/startup-html/about.html
@@ -21,28 +21,15 @@
       <hr />
     </header>
 
-    <main>
-      <div id="picture" class="picture-box"><img width="400px" src="placeholder.jpg" alt="random" /></div>
-
+    <main>    
       <p>
-        Simon is a repetitive memory game where you follow the demonstrated color sequence until you make a mistake. The
-        longer the sequence you repeat, the greater your score.
+        This is a website that helps you learn languages by growing a garden!
       </p>
-
-      <p>
-        The name Simon is a registered trademark of Milton-Bradley. Our use of the name and the game is for non-profit
-        educational use only. No part of this code or program should be used outside of that definition.
-      </p>
-
-      <div id="quote">
-        <div>Words are cheap. Show me the code.</div>
-        <div>- Linus Torvalds</div>
-      </div>
     </main>
 
     <footer>
       <hr />
-      <span class="text-reset">Author Name(s)</span>
+      <span class="text-reset">Dylan Harps</span>
       <br />
       <a href="https://github.com/Dylan-Harps/startup">GitHub</a>
     </footer>
