Update html files

--- a/startup-html/about.html
+++ b/startup-html/about.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <header>
-      <h1>About<sup>&reg;</sup></h1>
+      <h1>Startup</h1>
 
       <nav>
         <menu>
@@ -17,11 +17,10 @@
           <li><a href="about.html">About</a></li>
         </menu>
       </nav>
-
-      <hr />
     </header>
 
     <main>    
+        <h1>About</h1>
       <p>
         This is a website that helps you learn languages by growing a garden!
       </p>
