--- a/startup-html/index.html
+++ b/startup-html/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <header>
-      <h1>Startup<sup>&reg;</sup></h1>
+      <h1>Startup</h1>
 
       <!-- Navigation elements -->
       <nav>
