--- a/startup-html/quiz.html
+++ b/startup-html/quiz.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <header>
-      <h1>Quiz<sup>&reg;</sup></h1>
+      <h1>Startup</h1>
 
       <nav>
         <menu>
@@ -23,6 +23,7 @@
     </header>
 
     <main>
+      <h1>Quiz</h1>
       <div id="picture" class="picture-box"><img width="400px" src="lesson-screen.png" alt="quiz placeholder" /></div>
 
       <p>
