--- a/startup-html/garden.html
+++ b/startup-html/garden.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <header>
-      <h1>Garden<sup>&reg;</sup></h1>
+      <h1>Startup</h1>
 
       <nav>
         <menu>
@@ -22,7 +22,14 @@
     </header>
 
     <main>
-      <div id="picture" class="picture-box"><img width="400px" src="garden-screen.png" alt="garden placeholder" /></div>
+        <h1>Garden</h1>
+        <div id="picture" class="picture-box"><img width="400px" src="garden-screen.png" alt="garden placeholder" /></div>
+        <button onclick="startLesson()">Start Lesson</button>
+        <script>
+            function startLesson() {
+                alert("Insert Lesson Here!");
+            }
+        </script>
     </main>
 
     <footer>
