--- a/startup-html/garden.html
+++ b/startup-html/garden.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Startup</title>
+    <link rel="stylesheet" href="main.css" />
+    <link rel="stylesheet" href="garden.css" />
   </head>
   <body>
     <header>
@@ -24,7 +26,43 @@
     <main>
         <h1>Garden</h1>
         <div id="picture" class="picture-box"><img width="400px" src="garden-screen.png" alt="garden placeholder" /></div>
-        <button onclick="startLesson()">Start Lesson</button>
+        <table>
+            <tr>
+                <td><button onclick="startLesson()">Start Lesson</button></td>
+                <td><button onclick="startLesson()">Start Lesson</button></td>
+                <td><button onclick="startLesson()">Start Lesson</button></td>
+                <td><button onclick="startLesson()">Start Lesson</button></td>
+                <td><button onclick="startLesson()">Start Lesson</button></td>
+            </tr>
+            <tr>
+                <td><button onclick="startLesson()">Start Lesson</button></td>
+                <td><button onclick="startLesson()">Start Lesson</button></td>
+                <td><button onclick="startLesson()">Start Lesson</button></td>
+                <td><button onclick="startLesson()">Start Lesson</button></td>
+                <td><button onclick="startLesson()">Start Lesson</button></td>
+            </tr>
+            <tr>
+                <td><button onclick="startLesson()">Start Lesson</button></td>
+                <td><button onclick="startLesson()">Start Lesson</button></td>
+                <td><button onclick="startLesson()">Start Lesson</button></td>
+                <td><button onclick="startLesson()">Start Lesson</button></td>
+                <td><button onclick="startLesson()">Start Lesson</button></td>
+            </tr>
+            <tr>
+                <td><button onclick="startLesson()">Start Lesson</button></td>
+                <td><button onclick="startLesson()">Start Lesson</button></td>
+                <td><button onclick="startLesson()">Start Lesson</button></td>
+                <td><button onclick="startLesson()">Start Lesson</button></td>
+                <td><button onclick="startLesson()">Start Lesson</button></td>
+            </tr>
+            <tr>
+                <td><button onclick="startLesson()">Start Lesson</button></td>
+                <td><button onclick="startLesson()">Start Lesson</button></td>
+                <td><button onclick="startLesson()">Start Lesson</button></td>
+                <td><button onclick="startLesson()">Start Lesson</button></td>
+                <td><button onclick="startLesson()">Start Lesson</button></td>
+            </tr>
+        </table>
         <script>
             function startLesson() {
                 alert("Insert Lesson Here!");
