--- a/startup-html/index.html
+++ b/startup-html/index.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Startup HTML</title>
     <!--<link rel="icon" href="favicon.ico" />-->
+    <link rel="stylesheet" href="main.css" />
+    <link rel="stylesheet" href="login.css" />
   </head>
   <body>
     <header>
