Add garden tiles

--- a/startup-html/garden.html
+++ b/startup-html/garden.html
@@ -26,41 +26,41 @@
     <main>
         <h1>Garden</h1>
         <div id="picture" class="picture-box"><img width="400px" src="garden-screen.png" alt="garden placeholder" /></div>
-        <table>
+        <table class="garden-grid">
             <tr>
-                <td><button onclick="startLesson()">Start Lesson</button></td>
-                <td><button onclick="startLesson()">Start Lesson</button></td>
-                <td><button onclick="startLesson()">Start Lesson</button></td>
-                <td><button onclick="startLesson()">Start Lesson</button></td>
-                <td><button onclick="startLesson()">Start Lesson</button></td>
+                <td class="tile"><button onclick="startLesson()">Start Lesson</button></td>
+                <td class="tile"><button onclick="startLesson()">Start Lesson</button></td>
+                <td class="tile"><button onclick="startLesson()">Start Lesson</button></td>
+                <td class="tile"><button onclick="startLesson()">Start Lesson</button></td>
+                <td class="tile"><button onclick="startLesson()">Start Lesson</button></td>
             </tr>
             <tr>
-                <td><button onclick="startLesson()">Start Lesson</button></td>
-                <td><button onclick="startLesson()">Start Lesson</button></td>
-                <td><button onclick="startLesson()">Start Lesson</button></td>
-                <td><button onclick="startLesson()">Start Lesson</button></td>
-                <td><button onclick="startLesson()">Start Lesson</button></td>
+                <td class="tile"><button onclick="startLesson()">Start Lesson</button></td>
+                <td class="tile"><button onclick="startLesson()">Start Lesson</button></td>
+                <td class="tile"><button onclick="startLesson()">Start Lesson</button></td>
+                <td class="tile"><button onclick="startLesson()">Start Lesson</button></td>
+                <td class="tile"><button onclick="startLesson()">Start Lesson</button></td>
             </tr>
             <tr>
-                <td><button onclick="startLesson()">Start Lesson</button></td>
-                <td><button onclick="startLesson()">Start Lesson</button></td>
-                <td><button onclick="startLesson()">Start Lesson</button></td>
-                <td><button onclick="startLesson()">Start Lesson</button></td>
-                <td><button onclick="startLesson()">Start Lesson</button></td>
+                <td class="tile"><button onclick="startLesson()">Start Lesson</button></td>
+                <td class="tile"><button onclick="startLesson()">Start Lesson</button></td>
+                <td class="tile"><button onclick="startLesson()">Start Lesson</button></td>
+                <td class="tile"><button onclick="startLesson()">Start Lesson</button></td>
+                <td class="tile"><button onclick="startLesson()">Start Lesson</button></td>
             </tr>
             <tr>
-                <td><button onclick="startLesson()">Start Lesson</button></td>
-                <td><button onclick="startLesson()">Start Lesson</button></td>
-                <td><button onclick="startLesson()">Start Lesson</button></td>
-                <td><button onclick="startLesson()">Start Lesson</button></td>
-                <td><button onclick="startLesson()">Start Lesson</button></td>
+                <td class="tile"><button onclick="startLesson()">Start Lesson</button></td>
+                <td class="tile"><button onclick="startLesson()">Start Lesson</button></td>
+                <td class="tile"><button onclick="startLesson()">Start Lesson</button></td>
+                <td class="tile"><button onclick="startLesson()">Start Lesson</button></td>
+                <td class="tile"><button onclick="startLesson()">Start Lesson</button></td>
             </tr>
             <tr>
-                <td><button onclick="startLesson()">Start Lesson</button></td>
-                <td><button onclick="startLesson()">Start Lesson</button></td>
-                <td><button onclick="startLesson()">Start Lesson</button></td>
-                <td><button onclick="startLesson()">Start Lesson</button></td>
-                <td><button onclick="startLesson()">Start Lesson</button></td>
+                <td class="tile"><button onclick="startLesson()">Start Lesson</button></td>
+                <td class="tile"><button onclick="startLesson()">Start Lesson</button></td>
+                <td class="tile"><button onclick="startLesson()">Start Lesson</button></td>
+                <td class="tile"><button onclick="startLesson()">Start Lesson</button></td>
+                <td class="tile"><button onclick="startLesson()">Start Lesson</button></td>
             </tr>
         </table>
         <script>
