Add perspective to garden

--- a/startup-html/garden.html
+++ b/startup-html/garden.html
@@ -26,43 +26,43 @@
     <main>
         <h1>Garden</h1>
         <div id="picture" class="picture-box"><img width="400px" src="garden-screen.png" alt="garden placeholder" /></div>
-        <table class="garden-grid">
-            <tr>
-                <td class="tile"><button onclick="startLesson()">Start Lesson</button></td>
-                <td class="tile"><button onclick="startLesson()">Start Lesson</button></td>
-                <td class="tile"><button onclick="startLesson()">Start Lesson</button></td>
-                <td class="tile"><button onclick="startLesson()">Start Lesson</button></td>
-                <td class="tile"><button onclick="startLesson()">Start Lesson</button></td>
-            </tr>
-            <tr>
-                <td class="tile"><button onclick="startLesson()">Start Lesson</button></td>
-                <td class="tile"><button onclick="startLesson()">Start Lesson</button></td>
-                <td class="tile"><button onclick="startLesson()">Start Lesson</button></td>
-                <td class="tile"><button onclick="startLesson()">Start Lesson</button></td>
-                <td class="tile"><button onclick="startLesson()">Start Lesson</button></td>
-            </tr>
-            <tr>
-                <td class="tile"><button onclick="startLesson()">Start Lesson</button></td>
-                <td class="tile"><button onclick="startLesson()">Start Lesson</button></td>
-                <td class="tile"><button onclick="startLesson()">Start Lesson</button></td>
-                <td class="tile"><button onclick="startLesson()">Start Lesson</button></td>
-                <td class="tile"><button onclick="startLesson()">Start Lesson</button></td>
-            </tr>
-            <tr>
-                <td class="tile"><button onclick="startLesson()">Start Lesson</button></td>
-                <td class="tile"><button onclick="startLesson()">Start Lesson</button></td>
-                <td class="tile"><button onclick="startLesson()">Start Lesson</button></td>
-                <td class="tile"><button onclick="startLesson()">Start Lesson</button></td>
-                <td class="tile"><button onclick="startLesson()">Start Lesson</button></td>
-            </tr>
-            <tr>
-                <td class="tile"><button onclick="startLesson()">Start Lesson</button></td>
-                <td class="tile"><button onclick="startLesson()">Start Lesson</button></td>
-                <td class="tile"><button onclick="startLesson()">Start Lesson</button></td>
-                <td class="tile"><button onclick="startLesson()">Start Lesson</button></td>
-                <td class="tile"><button onclick="startLesson()">Start Lesson</button></td>
-            </tr>
-        </table>
+        <div class="garden-grid">
+            <div class="garden-row">
+                <div class="tile"><button onclick="startLesson()">Start Lesson</button></div>
+                <div class="tile"><button onclick="startLesson()">Start Lesson</button></div>
+                <div class="tile"><button onclick="startLesson()">Start Lesson</button></div>
+                <div class="tile"><button onclick="startLesson()">Start Lesson</button></div>
+                <div class="tile"><button onclick="startLesson()">Start Lesson</button></div>
+            </div>
+            <div class="garden-row">
+                <div class="tile"><button onclick="startLesson()">Start Lesson</button></div>
+                <div class="tile"><button onclick="startLesson()">Start Lesson</button></div>
+                <div class="tile"><button onclick="startLesson()">Start Lesson</button></div>
+                <div class="tile"><button onclick="startLesson()">Start Lesson</button></div>
+                <div class="tile"><button onclick="startLesson()">Start Lesson</button></div>
+            </div>
+            <div class="garden-row">
+                <div class="tile"><button onclick="startLesson()">Start Lesson</button></div>
+                <div class="tile"><button onclick="startLesson()">Start Lesson</button></div>
+                <div class="tile"><button onclick="startLesson()">Start Lesson</button></div>
+                <div class="tile"><button onclick="startLesson()">Start Lesson</button></div>
+                <div class="tile"><button onclick="startLesson()">Start Lesson</button></div>
+            </div>
+            <div class="garden-row">
+                <div class="tile"><button onclick="startLesson()">Start Lesson</button></div>
+                <div class="tile"><button onclick="startLesson()">Start Lesson</button></div>
+                <div class="tile"><button onclick="startLesson()">Start Lesson</button></div>
+                <div class="tile"><button onclick="startLesson()">Start Lesson</button></div>
+                <div class="tile"><button onclick="startLesson()">Start Lesson</button></div>
+            </div>
+            <div class="garden-row">
+                <div class="tile"><button onclick="startLesson()">Start Lesson</button></div>
+                <div class="tile"><button onclick="startLesson()">Start Lesson</button></div>
+                <div class="tile"><button onclick="startLesson()">Start Lesson</button></div>
+                <div class="tile"><button onclick="startLesson()">Start Lesson</button></div>
+                <div class="tile"><button onclick="startLesson()">Start Lesson</button></div>
+            </div>
+        </div>
         <script>
             function startLesson() {
                 alert("Insert Lesson Here!");
