--- a/startup-html/about.html
+++ b/startup-html/about.html
@@ -23,9 +23,14 @@
 
     <main>    
         <h1>About</h1>
-      <p>
-        This is a website that helps you learn languages by growing a garden!
-      </p>
+        <p>
+            This is a website that helps you learn languages by growing a garden!
+        </p>
+
+        <div id="picture" class="picture-box"><img width="400px" src="login-screen.png" alt="login placeholder" /></div>
+        <div id="picture" class="picture-box"><img width="400px" src="garden-screen.png" alt="garden placeholder" /></div>
+        <div id="picture" class="picture-box"><img width="400px" src="lesson-screen.png" alt="quiz placeholder" /></div>
+
     </main>
 
     <footer>
