--- a/startup-html/garden.html
+++ b/startup-html/garden.html
@@ -25,47 +25,46 @@
 
     <main>
         <h1>Garden</h1>
-        <div id="picture" class="picture-box"><img width="400px" src="garden-screen.png" alt="garden placeholder" /></div>
         <div class="garden-grid">
             <div class="garden-row">
-                <div class="tile"><button onclick="startLesson()">Start Lesson</button></div>
-                <div class="tile"><button onclick="startLesson()">Start Lesson</button></div>
-                <div class="tile"><button onclick="startLesson()">Start Lesson</button></div>
-                <div class="tile"><button onclick="startLesson()">Start Lesson</button></div>
-                <div class="tile"><button onclick="startLesson()">Start Lesson</button></div>
+                <div class="popup" onclick="startLesson(1)">Lesson Name<br>Start Lesson</div>
+                <div class="tile" onclick="startLesson(2)">Start Lesson</div>
+                <div class="tile" onclick="startLesson(3)">Start Lesson</div>
+                <div class="tile" onclick="startLesson(4)">Start Lesson</div>
+                <div class="tile" onclick="startLesson(5)">Start Lesson</div>
             </div>
             <div class="garden-row">
-                <div class="tile"><button onclick="startLesson()">Start Lesson</button></div>
-                <div class="tile"><button onclick="startLesson()">Start Lesson</button></div>
-                <div class="tile"><button onclick="startLesson()">Start Lesson</button></div>
-                <div class="tile"><button onclick="startLesson()">Start Lesson</button></div>
-                <div class="tile"><button onclick="startLesson()">Start Lesson</button></div>
+                <div class="tile" onclick="startLesson(6)">Start Lesson</div>
+                <div class="tile" onclick="startLesson(7)">Start Lesson</div>
+                <div class="tile" onclick="startLesson(8)">Start Lesson</div>
+                <div class="tile" onclick="startLesson(9)">Start Lesson</div>
+                <div class="tile" onclick="startLesson(10)">Start Lesson</div>
             </div>
             <div class="garden-row">
-                <div class="tile"><button onclick="startLesson()">Start Lesson</button></div>
-                <div class="tile"><button onclick="startLesson()">Start Lesson</button></div>
-                <div class="tile"><button onclick="startLesson()">Start Lesson</button></div>
-                <div class="tile"><button onclick="startLesson()">Start Lesson</button></div>
-                <div class="tile"><button onclick="startLesson()">Start Lesson</button></div>
+                <div class="tile" onclick="startLesson(11)">Start Lesson</div>
+                <div class="tile" onclick="startLesson(12)">Start Lesson</div>
+                <div class="tile" onclick="startLesson(13)">Start Lesson</div>
+                <div class="tile" onclick="startLesson(14)">Start Lesson</div>
+                <div class="tile" onclick="startLesson(15)">Start Lesson</div>
             </div>
             <div class="garden-row">
-                <div class="tile"><button onclick="startLesson()">Start Lesson</button></div>
-                <div class="tile"><button onclick="startLesson()">Start Lesson</button></div>
-                <div class="tile"><button onclick="startLesson()">Start Lesson</button></div>
-                <div class="tile"><button onclick="startLesson()">Start Lesson</button></div>
-                <div class="tile"><button onclick="startLesson()">Start Lesson</button></div>
+                <div class="tile" onclick="startLesson(16)">Start Lesson</div>
+                <div class="tile" onclick="startLesson(17)">Start Lesson</div>
+                <div class="tile" onclick="startLesson(18)">Start Lesson</div>
+                <div class="tile" onclick="startLesson(19)">Start Lesson</div>
+                <div class="tile" onclick="startLesson(20)">Start Lesson</div>
             </div>
             <div class="garden-row">
-                <div class="tile"><button onclick="startLesson()">Start Lesson</button></div>
-                <div class="tile"><button onclick="startLesson()">Start Lesson</button></div>
-                <div class="tile"><button onclick="startLesson()">Start Lesson</button></div>
-                <div class="tile"><button onclick="startLesson()">Start Lesson</button></div>
-                <div class="tile"><button onclick="startLesson()">Start Lesson</button></div>
+                <div class="tile" onclick="startLesson(21)">Start Lesson</div>
+                <div class="tile" onclick="startLesson(22)">Start Lesson</div>
+                <div class="tile" onclick="startLesson(23)">Start Lesson</div>
+                <div class="tile" onclick="startLesson(24)">Start Lesson</div>
+                <div class="tile" onclick="startLesson(25)">Start Lesson</div>
             </div>
         </div>
         <script>
-            function startLesson() {
-                alert("Insert Lesson Here!");
+            function startLesson(lessonID) {
+                alert(lessonID);
             }
         </script>
     </main>
