--- a/startup-html/garden.html
+++ b/startup-html/garden.html
@@ -27,7 +27,7 @@
         <h1>Garden</h1>
         <div class="garden-grid">
             <div class="garden-row">
-                <div class="popup" onclick="startLesson(1)">Lesson Name<br>Start Lesson</div>
+                <div class="tile" onclick="startLesson(1)">Lesson Name<br>Start Lesson</div>
                 <div class="tile" onclick="startLesson(2)">Start Lesson</div>
                 <div class="tile" onclick="startLesson(3)">Start Lesson</div>
                 <div class="tile" onclick="startLesson(4)">Start Lesson</div>
