--- a/startup-html/index.html
+++ b/startup-html/index.html
@@ -1,17 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <!-- Tell browsers not to scale the viewport automatically -->
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Startup HTML</title>
-    <!--<link rel="icon" href="favicon.ico" />-->
-    <link rel="stylesheet" href="main.css" />
-    <link rel="stylesheet" href="login.css" />
-  </head>
-  <body>
+    <head>
+        <meta charset="UTF-8" />
+        <!-- Tell browsers not to scale the viewport automatically -->
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>GrowLang</title>
+        <!--<link rel="icon" href="favicon.ico" />-->
+        <link rel="stylesheet" href="main.css" />
+        <link rel="stylesheet" href="login.css" />
+        <meta name="viewport" content="width=device-width, initial-scale=1" />
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous" />
+    </head>
+    <body>
     <header>
-      <h1>Startup</h1>
+      <h1>GrowLang</h1>
 
       <!-- Navigation elements -->
       <nav>
@@ -26,15 +28,16 @@
     </header>
 
     <main>
-      <h1>Login or Sign Up</h1>
-      <form method="get" action="garden.html">
+        <button type="button" class="btn btn-primary">Bootstrap</button>
+        <h1>Login or Sign Up</h1>
+        <form method="get" action="garden.html">
+            <div>
+                <span>@</span>
+                <input type="text" placeholder="your@email.com" />
+            </div>
         <div>
-          <span>@</span>
-          <input type="text" placeholder="your@email.com" />
-        </div>
-        <div>
-          <span>🔒</span>
-          <input type="password" placeholder="password" />
+            <span>🔒</span>
+            <input type="password" placeholder="password" />
         </div>
         <button type="submit">Login</button>
         <button type="submit">Create</button>
@@ -43,10 +46,11 @@
     </main>
 
     <footer>
-      <hr />
-      <span class="text-reset">Dylan Harps</span>
-      <br />
-      <a href="https://github.com/Dylan-Harps/startup">GitHub</a>
+        <hr />
+        <span class="text-reset">Dylan Harps</span>
+        <br />
+        <a href="https://github.com/Dylan-Harps/startup">GitHub</a>
     </footer>
-  </body>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
+    </body>
 </html>
