--- a/startup-html/index.html
+++ b/startup-html/index.html
@@ -5,11 +5,16 @@
         <!-- Tell browsers not to scale the viewport automatically -->
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>GrowLang</title>
-        <!--<link rel="icon" href="favicon.ico" />-->
         <link rel="stylesheet" href="main.css" />
         <link rel="stylesheet" href="login.css" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous" />
+        <!-- Include bootstrap CSS framework -->
+        <link 
+          href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" 
+          rel="stylesheet" 
+          integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" 
+          crossorigin="anonymous" 
+        />
     </head>
     <body>
     <header>
@@ -41,7 +46,7 @@
         <button type="submit">Login</button>
         <button type="submit">Create</button>
       </form>
-
+    <button type="button" class="btn btn-primary">Bootstrap</button>
     </main>
 
     <footer>
