--- a/startup-html/index.html
+++ b/startup-html/index.html
@@ -17,19 +17,24 @@
         />
     </head>
     <body>
-    <header>
-      <h1>GrowLang</h1>
-
-      <!-- Navigation elements -->
-      <nav>
-        <menu>
-          <li><a href="index.html">Home</a></li>
-          <li><a href="garden.html">Garden</a></li>
-          <li><a href="quiz.html">Quiz</a></li>
-          <li><a href="about.html">About</a></li>
+      <header class="container-fluid">
+      <nav class="navbar fixed-top navbar-dark">
+        <a class="navbar-brand" href="#">GrowLang<sup>&reg;</sup></a>
+        <menu class="navbar-nav">
+          <li class="nav-item">
+            <a class="nav-link active" href="index.html">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="garden.html">Garden</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="quiz.html">Quiz</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="about.html">About</a>
+          </li>
         </menu>
       </nav>
-      <hr />
     </header>
 
     <main>
