--- a/startup-html/index.html
+++ b/startup-html/index.html
@@ -54,11 +54,11 @@
     <button type="button" class="btn btn-primary">Bootstrap</button>
     </main>
 
-    <footer>
-        <hr />
-        <span class="text-reset">Dylan Harps</span>
-        <br />
-        <a href="https://github.com/Dylan-Harps/startup">GitHub</a>
+    <footer class="bg-dark text-white-50">
+        <div class="container-fluid"></div>
+          <span class="text-reset">Dylan Harps</span>
+          <a href="https://github.com/Dylan-Harps/startup">GitHub</a>
+        </div>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
     </body>
