--- a/startup-html/index.html
+++ b/startup-html/index.html
@@ -8,6 +8,7 @@
         <link rel="stylesheet" href="main.css" />
         <link rel="stylesheet" href="login.css" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
+
         <!-- Include bootstrap CSS framework -->
         <link 
           href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css"
@@ -18,7 +19,7 @@
     </head>
     <body>
       <header class="container-fluid">
-      <nav class="navbar fixed-top navbar-dark">
+      <nav class="navbar fixed-top">
         <a class="navbar-brand" href="#">GrowLang<sup>&reg;</sup></a>
         <menu class="navbar-nav">
           <li class="nav-item">
@@ -37,21 +38,22 @@
       </nav>
     </header>
 
-    <main>
+    <main class="container-fluid bg-secondary text-center">
+      <div class="login-box">
         <h1>Login or Sign Up</h1>
         <form method="get" action="garden.html">
-            <div>
-                <span>@</span>
-                <input type="text" placeholder="your@email.com" />
-            </div>
-        <div>
-            <span>🔒</span>
-            <input type="password" placeholder="password" />
-        </div>
-        <button type="submit">Login</button>
-        <button type="submit">Create</button>
-      </form>
-    <button type="button" class="btn btn-primary">Bootstrap</button>
+          <div class="input-group mb-3">
+            <span class="input-group-text">@</span>
+            <input class="form-control" type="text" placeholder="your@email.com" />
+          </div>
+          <div class="input-group mb-3">
+            <span class="input-group-text">🔒</span>
+            <input class="form-control" type="password" placeholder="password" />
+          </div>
+          <button type="submit" class="btn btn-primary">Login</button>
+          <button type="submit" class="btn btn-secondary">Create</button>
+        </form>
+      </div>
     </main>
 
     <footer class="bg-dark text-white-50">
