--- a/startup-html/garden.html
+++ b/startup-html/garden.html
@@ -17,7 +17,7 @@
 </head>
   <body>
     <header class="container-fluid">
-      <nav class="navbar fixed-top navbar-dark">
+      <nav class="navbar fixed-top">
         <a class="navbar-brand" href="#">GrowLang<sup>&reg;</sup></a>
         <menu class="navbar-nav">
           <li class="nav-item">
