Center garden grid

--- a/startup-html/garden.html
+++ b/startup-html/garden.html
@@ -37,7 +37,7 @@
     </header>
 
     <main>
-        <h1>Garden</h1>
+        <h1>Your Garden</h1>
         <div class="garden-grid">
             <div class="garden-row">
                 <div class="tile" onclick="startLesson(1)">Lesson Name<br>Start Lesson</div>
@@ -74,8 +74,7 @@
                 <div class="tile" onclick="startLesson(24)">Start Lesson</div>
                 <div class="tile" onclick="startLesson(25)">Start Lesson</div>
             </div>
-        </div>
-        
+        </div>  
     </main>
 
     <footer class="bg-dark text-white-50">
