--- a/startup-html/garden.html
+++ b/startup-html/garden.html
@@ -38,6 +38,7 @@
 
     <main>
         <h1>Your Garden</h1>
+        <!-- I'll include bootstrap popovers later on because they appear to use javascript-->
         <div class="garden-grid">
             <div class="garden-row">
                 <div class="tile" onclick="startLesson(1)">Lesson Name<br>Start Lesson</div>
