--- a/startup-html/quiz.html
+++ b/startup-html/quiz.html
@@ -35,21 +35,23 @@
       </nav>
     </header>
 
-    <main>
-      <h1>Quiz</h1>
-      <div class="progress-bar">
-        <label for="progress-bar">Progress:</label>
-        <progress id="progress-bar" value="1" max="5"></progress>
+    <main style="justify-content: flex-start">
+      <div class="quiz-progress">
+        <p>Question 1/5 (20%)</p>
+        <div class="progress" role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="5" style="width: 75%">
+          <div class="progress-bar progress-bar-striped" style="width: 20%">20%</div>
+        </div>
       </div>
-      <h1>Fill in the blank:</h1>
-      <div class="question">Question goes here</div>
+
+      <div class="instruction">Fill in the blank:</div>
+      <div class="question">Yo ____ mejorar mi español.</div>
       <div class="answer-options">
-        <button class="option">Option 1</button>
-        <button class="option">Option 2</button>
-        <button class="option">Option 3</button>
-        <button class="option">Option 4</button>
+        <button class="btn btn-outline-primary option">Option 1</button>
+        <button class="btn btn-outline-primary option">Option 2</button>
+        <button class="btn btn-outline-primary option">Option 3</button>
+        <button class="btn btn-outline-primary option">Option 4</button>
       </div>
-      <button class="confirm-answer">Confirm Answer</button>
+      <button class="btn btn-primary confirm-answer">Confirm Answer</button>
     </main>
 
     <footer class="bg-dark text-white-50">
