--- a/index.html
+++ b/index.html
@@ -5,8 +5,16 @@
     <!-- <link rel="icon" href="/favicon.ico" /> -->
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-
+    <link rel="stylesheet" href="main.css" />
+    <link rel="stylesheet" href="login.css" />
     <title>GrowLang</title>
+    <!-- Include bootstrap CSS framework -->
+    <link 
+          href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css"
+          rel="stylesheet" 
+          integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi"
+          crossorigin="anonymous" 
+        />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
